--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     body {
       min-height: 100vh;
       padding-top: 150px; /* Increased top padding to create more space above white box */
-      /* Note: Background black */
     }
 
     #messages {
@@ -39,7 +38,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative;
       height: 256px;
-      background-color: #fce7f3; /* Note: Message box pink */
+      background-color: #fce7f3;
       background-image: none;
       background-size: 100% 100%;
       background-position: center;
@@ -87,13 +86,13 @@
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     }
     .message-bubble.self {
-      background-color: #3b82f6; /* Note: Bubble blue (self) */
+      background-color: #3b82f6;
       color: white;
       margin-left: auto;
       border-bottom-right-radius: 0.25rem;
     }
     .message-bubble.other {
-      background-color: #e5e7eb; /* Note: Bubble light gray (other) */
+      background-color: #e5e7eb;
       color: #1f2937;
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
@@ -130,7 +129,7 @@
       line-height: 1.5rem;
       width: 100%;
       max-width: 100%;
-      background-color: #3b82f6; /* Note: Input blue */
+      background-color: #3b82f6;
       color: white;
       border-radius: 1rem;
       padding: 0.5rem 1rem;
@@ -157,7 +156,7 @@
     #sendButton {
       width: 2.5rem;
       height: 2.5rem;
-      background-color: #2563eb; /* Note: Send button blue */
+      background-color: #2563eb;
       color: white;
       border-radius: 50%;
       display: flex;
@@ -171,7 +170,7 @@
       background-color: #1d4ed8;
     }
     #copyCodeButton {
-      background-color: #10b981; /* Note: Copy button green */
+      background-color: #10b981;
       color: white;
       padding: 0.25rem 0.75rem;
       border-radius: 0.375rem;
